--- a/resources/static/style.css
+++ b/resources/static/style.css
@@ -1,9 +1,79 @@
+html{
+    font-family: -apple-system, "Segoe UI", sans-serif;
+}
+
+*, *::after, *::before{
+    box-sizing: inherit;
+}
+
+body{
+    box-sizing: border-box;
+    margin: 0;
+}
+
+.main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.header{
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+}
+
+.title{
+    display: flex;
+    justify-self: center;
+    margin: 0.5rem auto;
+}
+
 .no-deco{
     text-decoration: none;
     color: inherit;
+    margin: inherit;
 }
 
 .no-deco:hover{
     text-decoration: underline;
-    font-weight: 700;
+}
+
+.navbar {
+    max-width: 640px;
+    margin: 0.5rem auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.navbar--item{
+    padding: 0 1rem;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+    margin: 0.5rem auto;
+    padding: 1rem;
+}
+
+.card--header{
+    display: flex;
+    margin: 0 auto;
+    margin-bottom: 0.5rem;
+}
+
+.card--list{
+    margin: 0 auto;
+    padding: 0;
+    justify-content: center;
+}
+
+.card--list-item{
+    display: flex;
+    margin: 0 auto;
+    padding: 0;
+    list-style: none;
 }
