--- a/resources/static/style.css
+++ b/resources/static/style.css
@@ -77,3 +77,58 @@ body{
     padding: 0;
     list-style: none;
 }
+
+.w3-modal {
+    z-index: 3;
+    display: none;
+    padding-top: 100px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.w3-modal-content {
+    margin: auto;
+    background-color: #fff;
+    position: relative;
+    padding: 0;
+    outline: 0;
+    width: 600px;
+}
+
+.w3-container{
+    padding: 0.01em 16px;
+}
+
+.w3-teal,
+.w3-hover-teal:hover {
+    color: #fff !important;
+    background-color: #009688 !important;
+}
+
+.w3-button {
+    border: none;
+    text-decoration: none;
+    color: inherit;
+    background-color: inherit;
+    text-align: center;
+    font-family: inherit;
+    font-size: inherit;
+    cursor: pointer;
+}
+
+.w3-button:hover {
+    text-decoration: underline;
+}
+
+.w3-display-topright {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 8px 16px;
+}
